# unsafe-set

./: .gitignore  LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pyproject.toml
.github/workflows/: workflow.yml
docs/: paper.tex
src/: __about__.py  main.py
src/colav_unsafe_set/: __init__.py  unsafe_set.py
src/colav_unsafe_set/collision_geometry/: __init__.py  collision_geometry.py
src/colav_unsafe_set/indices_of_interest/: __init__.py  indices_of_interest.py  unionise_indices_of_interest.py
src/colav_unsafe_set/objects/: __init__.py  configuration.py  dynamic_object.py  dynamic_obstacle.py  dynamic_obstacle_with_metrics.py  objects.py
src/colav_unsafe_set/position_prediction/: __init__.py  position_prediction.py
src/colav_unsafe_set/risk_assessment/: __init__.py  obstacle_metric_calculator.py  risk_assessment.py
src/colav_unsafe_set/unsafe_set/: __init__.py  unsafe_set.py
tests/indices_of_interest/: test_indices_of_interest.py  test_unionise_indices_of_interest.py
tests/integration_tests/: test_unsafe_set_integration_tests.py  test_unsafe_set_integration_tests_visualisations.py  unsafe_set_integration_tests_visualisations.py
tests/integration_tests/scenarios/: scenario 10.yml  scenario 11.yml  scenario 12.yml  scenario 13.yml  scenario 14.yml  scenario 15.yml  scenario 16.yml  scenario 17: no yaw rate.yml  scenario 18, no yaw rate constant velocity.yml  scenario 7: dense obstacle field.yml  scenario 8.yml  scenario 9.yml  scenario_0: no obstacles.yml  scenario_1: static obstacle with moving agent.yml  scenario_2: moving obstacles in a grid.yml  scenario_3:  multi moving obstacles and time varying unsafe sets.yml  scenario_4:  multi moving obstacles and time varying unsafe sets.yml  scenario_5: narrow passage.yml  scenario_6: intersection conflict.yml
tests/integration_tests/scenarios1/: scenario 1: 1 static obstacle.yml
tests/risk_assesment/: test_risk_assesment.py
tests/unit_tests/indices_of_interest/: test_calculate_I2.py  test_calculate_I3.py  test_calculate_i1.py  test_indices_of_interest.py  test_unionise_indices_of_interest.py
(+2 files in other folders)
